policies/pss-seccomp/binding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pss-seccomp-deny.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/pss-seccomp: deny
    objectSelector: {}
  policyName: pss-seccomp.vap-library.com
  validationActions:
  - Deny
  - Audit
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pss-seccomp-warn.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/pss-seccomp: warn
    objectSelector: {}
  policyName: pss-seccomp.vap-library.com
  validationActions:
    - Warn
