policies/pss-seccomp/policy.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: "pss-seccomp.vap-library.com"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods","replicationcontrollers","podtemplates", "pods/ephemeralcontainers"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations: 
    - expression: "object.kind != 'Pod' || 
      (!(has(object.spec.securityContext.seccompProfile) && has(object.spec.securityContext.seccompProfile.type)) || ((has(object.spec.securityContext.seccompProfile) && has(object.spec.securityContext.seccompProfile.type)) && object.spec.securityContext.seccompProfile.type != 'Unconfined' && object.spec.securityContext.seccompProfile.type != '')) &&
      (!has(object.spec.initContainers) || (has(object.spec.initContainers) && (object.spec.initContainers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type))) && (has(object.spec.securityContext) && (has(object.spec.securityContext.seccompProfile) && has(object.spec.securityContext.seccompProfile.type)) && (object.spec.securityContext.seccompProfile.type == 'RuntimeDefault' || object.spec.securityContext.secco [...]
      (!has(object.spec.ephemeralContainers) || (has(object.spec.ephemeralContainers) && (object.spec.ephemeralContainers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type))) && (has(object.spec.securityContext) && (has(object.spec.securityContext.seccompProfile) && has(object.spec.securityContext.seccompProfile.type)) && (object.spec.securityContext.seccompProfile.type == 'RuntimeDefault' || object.spec.securi [...]
      (((object.spec.containers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type)))) && (has(object.spec.securityContext) && (has(object.spec.securityContext.seccompProfile) && has(object.spec.securityContext.seccompProfile.type)) && (object.spec.securityContext.seccompProfile.type == 'RuntimeDefault' || object.spec.securityContext.seccompProfile.type == 'LocalHost'))) || (object.spec.containers.all(container, [...]
      message: "securityContext.seccompProfile.type must be set to true on any containers, initContainers, and ephemeralContainers in Pods"
      reason: Invalid
    - expression: "['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job','ReplicationController'].all(kind, object.kind != kind) ||
      (!(has(object.spec.template.spec.securityContext.seccompProfile) && has(object.spec.template.spec.securityContext.seccompProfile.type)) || ((has(object.spec.template.spec.securityContext.seccompProfile) && has(object.spec.template.spec.securityContext.seccompProfile.type)) && object.spec.template.spec.securityContext.seccompProfile.type != 'Unconfined' && object.spec.template.spec.securityContext.seccompProfile.type != '')) &&
      (!has(object.spec.template.spec.initContainers) || (has(object.spec.template.spec.initContainers) && (object.spec.template.spec.initContainers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type))) && (has(object.spec.template.spec.securityContext) && (has(object.spec.template.spec.securityContext.seccompProfile) && has(object.spec.template.spec.securityContext.seccompProfile.type)) && (object.spec.template [...]
      (!has(object.spec.template.spec.ephemeralContainers) || (has(object.spec.template.spec.ephemeralContainers) && (object.spec.template.spec.ephemeralContainers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type))) && (has(object.spec.template.spec.securityContext) && (has(object.spec.template.spec.securityContext.seccompProfile) && has(object.spec.template.spec.securityContext.seccompProfile.type)) && (objec [...]
      (((object.spec.template.spec.containers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type)))) && (has(object.spec.template.spec.securityContext) && (has(object.spec.template.spec.securityContext.seccompProfile) && has(object.spec.template.spec.securityContext.seccompProfile.type)) && (object.spec.template.spec.securityContext.seccompProfile.type == 'RuntimeDefault' || object.spec.template.spec.securityCon [...]
      message: "securityContext.seccompProfile.type must be set to true on containers in Workloads"
      reason: Invalid
    - expression: "object.kind != 'CronJob' || 
      (!(has(object.spec.jobTemplate.spec.template.spec.securityContext.seccompProfile) && has(object.spec.jobTemplate.spec.template.spec.securityContext.seccompProfile.type)) || ((has(object.spec.jobTemplate.spec.template.spec.securityContext.seccompProfile) && has(object.spec.jobTemplate.spec.template.spec.securityContext.seccompProfile.type)) && object.spec.jobTemplate.spec.template.spec.securityContext.seccompProfile.type != 'Unconfined' && object.spec.jobTemplate.spec.template.spec.security [...]
      (!has(object.spec.jobTemplate.spec.template.spec.initContainers) || (has(object.spec.jobTemplate.spec.template.spec.initContainers) && (object.spec.jobTemplate.spec.template.spec.initContainers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type))) && (has(object.spec.jobTemplate.spec.template.spec.securityContext) && (has(object.spec.jobTemplate.spec.template.spec.securityContext.seccompProfile) && has(obj [...]
      (!has(object.spec.jobTemplate.spec.template.spec.ephemeralContainers) || (has(object.spec.jobTemplate.spec.template.spec.ephemeralContainers) && (object.spec.jobTemplate.spec.template.spec.ephemeralContainers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type))) && (has(object.spec.jobTemplate.spec.template.spec.securityContext) && (has(object.spec.jobTemplate.spec.template.spec.securityContext.seccompProf [...]
      (((object.spec.jobTemplate.spec.template.spec.containers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type)))) && (has(object.spec.jobTemplate.spec.template.spec.securityContext) && (has(object.spec.jobTemplate.spec.template.spec.securityContext.seccompProfile) && has(object.spec.jobTemplate.spec.template.spec.securityContext.seccompProfile.type)) && (object.spec.jobTemplate.spec.template.spec.securityCon [...]
      message: "securityContext.seccompProfile.type must be set to true on containers in CronJobs"
      reason: Invalid
    - expression: "object.kind != 'PodTemplate' ||
      (!(has(object.template.spec.securityContext.seccompProfile) && has(object.template.spec.securityContext.seccompProfile.type)) || ((has(object.template.spec.securityContext.seccompProfile) && has(object.template.spec.securityContext.seccompProfile.type)) && object.template.spec.securityContext.seccompProfile.type != 'Unconfined' && object.template.spec.securityContext.seccompProfile.type != '')) &&
      (!has(object.template.spec.initContainers) || (has(object.template.spec.initContainers) && (object.template.spec.initContainers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type))) && (has(object.template.spec.securityContext) && (has(object.template.spec.securityContext.seccompProfile) && has(object.template.spec.securityContext.seccompProfile.type)) && (object.template.spec.securityContext.seccompProfil [...]
      (!has(object.template.spec.ephemeralContainers) || (has(object.template.spec.ephemeralContainers) && (object.template.spec.ephemeralContainers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type))) && (has(object.template.spec.securityContext) && (has(object.template.spec.securityContext.seccompProfile) && has(object.template.spec.securityContext.seccompProfile.type)) && (object.template.spec.securityContex [...]
      (((object.template.spec.containers.all(container, !has(container.securityContext) || (has(container.securityContext) && !has(container.securityContext.seccompProfile.type)))) && (has(object.template.spec.securityContext) && (has(object.template.spec.securityContext.seccompProfile) && has(object.template.spec.securityContext.seccompProfile.type)) && (object.template.spec.securityContext.seccompProfile.type == 'RuntimeDefault' || object.template.spec.securityContext.seccompProfile.type == 'L [...]
      message: "securityContext.seccompProfile.type must be set to true on containers in PodTemplates"
      reason: Invalid
